# the-perfect-spaghetti

./: .gitmodules  cabal.project  shell.nix  the-perfect-spaghetti.cabal
app/: Main.hs
app/Spaghetti/: Node.hs
app/Spaghetti/GUI/: ListBox.hs  NodeEditor.hs  SDL.hs  Window.hs
data/: active_mods.json  assembling-machine.json  boiler.json  equipment-grid.json  equipment.json  fluid.json  furnace.json  generator.json  inserter.json  lab.json  mining-drill.json  projectile.json  reactor.json  rocket-silo.json  solar-panel.json  technology.json  transport-belt.json
src/Spaghetti/: LoadJSON.hs  Planner.hs  Types.hs
